Add block class and some block description